Modified JTREG testcase to address review comments